--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="start-modal closed">
+    <div class="start-modal-content closed">
+
+    </div>
+  </div>
+  <div class="win-modal closed">
+    <div class="win-modal-content closed">
+      <h2>You Win!</h2>
+    </div>
+  </div>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
