--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <div class="win-modal closed">
     <div class="win-modal-content closed">
       <h2>You Win!</h2>
+      <h3>Score</h3>
+      <span id="score"></span>
+      <h3>High Score</h3>
+      <span id="high-score"></span>
     </div>
   </div>
 
