implemented gems and score keeping. Need to clear score on death

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <h2>Score: <span id="score"></span></h2>
   <div class="start-modal closed">
     <div class="start-modal-content closed">
 
@@ -15,9 +16,9 @@
     <div class="win-modal-content closed">
       <h2>You Win!</h2>
       <h3>Score</h3>
-      <span id="score"></span>
-      <h3>High Score</h3>
-      <span id="high-score"></span>
+      <span id="modal-score"></span>
+      <!-- <h3>High Score</h3>
+      <span id="high-score"></span> -->
     </div>
   </div>
 
