play again not working

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <h2>Total Score: <span id="modal-total-score">0</span></h2>
         </div>
       </div>
-      <small>Keep playing to unlock new characters!</small>
-      <button type="button" name="play-again">Play Again!</button>
+      <p>Keep playing to unlock new characters!</p>
+      <button type="button" name="play-again" id="replay-btn">Play Again!</button>
     </div>
   </div>
 
