--- a/index.html
+++ b/index.html
@@ -39,6 +39,24 @@
         </div>
       </div>
       <p>Keep playing to unlock new characters!</p>
+      <h2>Select Character</h2>
+      <div class="player-select" id="player-select">
+        <div class="play-boy">
+          <img src="images/char-boy.png" class="char boy" id="boy" alt="boy-character">
+        </div>
+        <div class="play-cat-girl">
+          <img src="images/char-cat-girl.png" class="char cat-girl closed" id="cat-girl"  alt="cat girl character">
+        </div>
+        <div class="play-horn-girl">
+          <img src="images/char-horn-girl.png" class="char horn-girl closed" id="horn-girl"  alt="horn girl character">
+        </div>
+        <div class="play-pink-girl">
+          <img src="images/char-pink-girl.png" class="char pink-girl closed" id="pink-girl"  alt="pink girl character">
+        </div>
+        <div class="play-princess">
+          <img src="images/char-princess-girl.png" class="char princess closed" id="princess"  alt="princess character">
+        </div>
+      </div>
       <button type="button" name="play-again" id="replay-btn">Play Again!</button>
     </div>
   </div>
