changed page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Effective JavaScript: Frogger</title>
+    <title>To The Water!</title>
     <link href="https://fonts.googleapis.com/css?family=Kirang+Haerang" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
